feat(mqtt): 实现完整的MQTT协议编解码器支持，支持动态版本协商
- 新增MqttProtocolVersionDetector：从CONNECT消息自动检测MQTT协议版本
- 新增MqttProtocolVersionManager：管理每个连接的协议版本和编解码器缓存
- 新增MqttChannelHandlerAdapter：将MQTT编解码器适配为Netty ChannelHandler
- 新增MqttProtocolErrorHandler：统一处理各种MQTT协议错误和异常情况
- 更新MqttChannelInitializer：集成编解码器适配器，启动时预热编解码器缓存
- 支持MQTT v3.1, v3.1.1协议版本动态切换和兼容性回退
- 实现高性能编解码器缓存机制，避免重复创建编解码器实例
- 添加完整的单元测试覆盖，验证版本检测、协商和编解码器功能

解决了之前MQTT连接建立后立即断开的问题，现在支持：
- 自动协议版本检测和协商
- 动态编解码器切换
- 完善的错误处理和连接状态管理
- 高并发场景下的性能优化

🤖 Generated with [Claude Code](https://claude.ai/code)

Co-Authored-By: Claude <noreply@anthropic.com>